src/objects/pca__PostcodeAnywhereSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>pca__CountryByIP__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If set, the app will attempt to set the country based upon user location</inlineHelpText>
        <label>Set Country By IP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pca__CustomFieldNumber__c</fullName>
        <label>CustomFieldNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pca__Key__c</fullName>
        <inlineHelpText>Your Postcode Anywhere API Key suitable for internal web service transactions. It should be in the format AA11-AA11-AA11-AA11.</inlineHelpText>
        <label>Key</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <label>Postcode Anywhere Settings</label>
</CustomObject>